--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "lowdb": "^6.0.1",
-    "mongodb": "^6.1.0"
+    "mongodb": "^6.1.0",
+    "ejs": "^3.1.9",
+    "node-fetch": "^2.7.0"
   },
   "engines": {
     "node": "16.x"
